[package]
authors = ["JoE11-y <Josephedoh77@gmail.com>"]
edition = "2021"
name = "quizzler"
version = "0.1.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[features]
# for more explicit tests, cargo test --features=backtraces
# backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
cosmwasm-schema = "3.0.0"
cosmwasm-std = { version = "3.0.0", features = ["stargate"] }
cw-storage-plus = "3.0.0"
cw2 = "3.0.0"
schemars = "1.0.2"
serde = { version = "1.0.227", default-features = false, features = ["derive"] }
thiserror = { version = "2.0.16" }
cw-utils = "3.0.0"
semver = "1"
sha2 = "0.10.9"
hex = "0.4"

[dev-dependencies]
cw-multi-test = "3.0.0"
osmosis-test-tube = "27.0.1"
ed25519-dalek = { version = "2", default-features = false, features = [
  "alloc",
] }
ed25519-zebra = { version = "=4.0.3", default-features = false }
rand_core = "0.6"
